tests/golden/snapshots/render_scaffolders_matrix__instruction_large_numeric_args.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=instruction ===
use anchor_lang::prelude::*;

#[derive(Accounts)]
#[instruction(order_id: u128, quantity: u64)]
pub struct PlaceOrder<'info> {
    #[account(mut)]
    pub trader: Signer<'info>,
}
// === sunscreen:auto-generated:end segment=file ===

// === sunscreen:user-region:begin segment=handler ===
pub fn handler(
    ctx: Context<PlaceOrder>,
    order_id: u128,
    quantity: u64,
) -> Result<()> {
    let _ = ctx;
    let _ = &order_id;
    let _ = &quantity;
    Ok(())
}
// === sunscreen:user-region:end segment=handler ===
