tests/golden/snapshots/render_scaffolders_matrix__instruction_mut_pda.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=instruction ===
use anchor_lang::prelude::*;

#[derive(Accounts)]
#[instruction(amount: u64)]
pub struct InitializeVault<'info> {
    #[account(mut, seeds = [b"vault", authority.key().as_ref()], bump)]
    pub vault: AccountInfo<'info>,
    #[account(mut)]
    pub authority: Signer<'info>,
    pub system_program: Program<'info, System>,
}
// === sunscreen:auto-generated:end segment=file ===

// === sunscreen:user-region:begin segment=handler ===
pub fn handler(
    ctx: Context<InitializeVault>,
    amount: u64,
) -> Result<()> {
    let _ = ctx;
    let _ = &amount;
    Ok(())
}
// === sunscreen:user-region:end segment=handler ===
