tests/golden/snapshots/render_scaffolders_matrix__instruction_token_programs.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=instruction ===
use anchor_lang::prelude::*;

#[derive(Accounts)]
pub struct TransferTokens<'info> {
    pub token_program: Program<'info, anchor_spl::token::Token>,
    pub ata_program: Program<'info, anchor_spl::associated_token::AssociatedToken>,
    pub payer: Signer<'info>,
}
// === sunscreen:auto-generated:end segment=file ===

// === sunscreen:user-region:begin segment=handler ===
pub fn handler(
    ctx: Context<TransferTokens>,
) -> Result<()> {
    let _ = ctx;
    Ok(())
}
// === sunscreen:user-region:end segment=handler ===
