tests/golden/snapshots/render_scaffolders_matrix__instructions_mod_segment_single.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
pub mod ping;
pub use ping::*;
