tests/golden/snapshots/render_scaffolders_matrix__instructions_mod_segment_sorted.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
pub mod close_vault;
pub use close_vault::*;
pub mod deposit;
pub use deposit::*;
pub mod initialize;
pub use initialize::*;
